Bug 455890 - Toggling navigation bar visibility breaks UI
Summary: Toggling navigation bar visibility breaks UI
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-06-24 14:37 UTC by popov895
Modified: 2024-03-28 22:49 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Broken UI (200.78 KB, image/png)
2022-06-24 14:37 UTC, popov895
Details
Screen recording (421.46 KB, video/x-matroska)
2024-03-27 21:45 UTC, Grósz Dániel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description popov895 2022-06-24 14:37:35 UTC
Created attachment 150118 [details]
Broken UI

SUMMARY

Toggling the visibility of the navigation bar (Settings > Show Navigation Bar) breaks the UI of the panel where it's placed.

SOFTWARE/OS VERSIONS

Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.25.80
KDE Frameworks Version: 5.96.0
Qt Version: 5.15.4
Kernel Version: 5.13.0-51-generic (64-bit)
Graphics Platform: X11
Comment 1 Christoph Cullmann 2022-07-03 15:32:30 UTC
Yeah, can reproduce, guess not all cases are handled there nicely.
Comment 2 Christoph Cullmann 2022-07-03 16:47:42 UTC
Hmm, I now tried it again with master.
And now I fail to reproduce :(
Comment 3 Christoph Cullmann 2022-07-08 21:22:27 UTC
I tried this now more often in the master Kate version, fail to reproduce.
If you have some steps, please re-open, thanks!
Comment 4 Bug Janitor Service 2022-07-23 04:36:26 UTC
Dear Bug Submitter,

This bug has been in NEEDSINFO status with no change for at least
15 days. Please provide the requested information as soon as
possible and set the bug status as REPORTED. Due to regular bug
tracker maintenance, if the bug is still in NEEDSINFO status with
no change in 30 days the bug will be closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

If you have already provided the requested information, please
mark the bug as REPORTED so that the KDE team knows that the bug is
ready to be confirmed.

Thank you for helping us make KDE software even better for everyone!
Comment 5 Bug Janitor Service 2022-08-07 04:35:27 UTC
This bug has been in NEEDSINFO status with no change for at least
30 days. The bug is now closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

Thank you for helping us make KDE software even better for everyone!
Comment 6 Grósz Dániel 2024-03-27 21:41:44 UTC
Still happens in both Kate or KWrite 24.02.1. I'll attach a screen recording.

It depends on that
- Auto hide tabs is enabled in Configure/Behavior/Tabs, so that the tab bar is hidden when there is only one file open
- there is only one file open

There are two variants of the glitch:
- one that happens when disabling the navigation bar in the above conditions
- one that happens when enabling the navigation bar, with the additional condition that the navigation bar hasn't been visible since starting Kate or KWrite, or that the last time the navigation bar was visible, the tab bar was also visible.

Normally the four buttons that appear stretched in the glitch are
- at the ends of the tab bar if the tab bar is visible
- at the ends of the navigation bar if the tab bar is hidden but the navigation bar is visible
- hidden if neither the tab bar, nor the navigation bar is visible.
These happen if a given state (w.r.t. the visibility of the tab bar and the navigation bar) is reached via opening Kate or KWrite in a given state, via opening or closing a tab, or toggling the Auto hide tabs option.

I guess the bug exists because
- when the navigation bar gets disabled when the tab bar is invisible, the buttons don't get hidden
- when the navigation bar gets enabled and the tab bar is invisible, the buttons don't get moved to the navigation bar if they are currently invisible in some cases (perhaps when they are in the invisible tab bar rather than in the hitherto invisible navigation bar?)

Operating System: openSUSE Tumbleweed 20240321
KDE Plasma Version: 6.0.2
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.2
Kernel Version: 6.8.1-1-default (64-bit)
Graphics Platform: X11
Comment 7 Grósz Dániel 2024-03-27 21:45:00 UTC
Created attachment 167869 [details]
Screen recording
Comment 8 Waqar Ahmed 2024-03-28 22:30:01 UTC
Breaks when "auto hide tabs" is active.
Comment 9 Waqar Ahmed 2024-03-28 22:49:47 UTC
Git commit 8544570bd54fbcac299b10a72bfad53574b05bd9 by Waqar Ahmed.
Committed on 28/03/2024 at 22:49.
Pushed by waqar into branch 'master'.

Fix tabbar visibility check

M  +1    -1    apps/lib/kateviewspace.cpp

https://invent.kde.org/utilities/kate/-/commit/8544570bd54fbcac299b10a72bfad53574b05bd9