Fix tabbar visibility check

BUG: 455890